# eam-abi-robustness

./: .copier-answers.yml  .gitignore  NOTICE  README.md  create_rdm_figure.ipynb  pydmc_test.ipynb  pyproject.toml  rdmc_test.ipynb  test_bf_keras.ipynb  test_blackjax_repeated_warmup.ipynb  test_jax.ipynb  test_nle.ipynb  test_pymc_jax.ipynb
conf/: config.yaml  test_npe.yaml  train_npe.yaml
conf/approximator/: continuous_approximator.yaml
conf/callbacks/: tensorboard.yaml
experiment_1/: check_likelihood.py  check_mcmc.py  check_metrics.py  check_npe_diagnostics.py  check_prior_pushforward.py  check_prior_pushforward_rdm.py  check_prior_pushforward_rdmc.py  check_profile_likelihood.py  check_robustness.py  check_robustness.sh  collect_mcmc.py  fit_mcmc.py  fit_mcmc_nle.py  fit_mcmc_slurm.py  generate_test_data.py  plot_robustness.py  predict_npe.py  predict_npe.sh  train_npe.py
experiment_2/: check_metrics.py  check_npe_diagnostics.py  check_prior_pushforward.py  check_robustness.py  collect_mcmc.py  fit_mcmc_slurm.py  generate_test_data.py  predict_npe.py
experiment_4/: check_posterior_predictive_meta.py  check_posterior_predictive_simple.py  check_robustness_simple.py  check_summary_mmd_meta.py  check_summary_mmd_simple.py  fit_mcmc.py  fit_mcmc_meta.py  fit_mcmc_simple.py  predict_npe_meta.py  predict_npe_simple.py  train_npe.py
src/: __init__.py  amortizers.py  bayesflow_plots.py  configuration.py  custom.py  data.py  design.py  priors.py  pymc_models.py  simulation.py  sweeper.py  trainer.py  utils.py
tests/: test_pymc_models.py
(+122 files in other folders)
