[project]
name = "eam_abi_robustness"
version = "0.0.1"
authors = [
  { name="Malte Luken", email="m.luken@esciencecenter.nl" },
]
description = "Dummy package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "bayesflow",
  "pymc",
  "jax",
  "blackjax",
  "tensorflow[and-cuda]",
  "hydra-core",
  "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"